--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
       <ul>
       <li><a href="https://www.intelligence-apprentie.fr/campus/ia-nantes/">Ecole</a></li>
       <li><a href="https://www.carrefour.fr/magasin/nantes-beaulieu">Entreprise</a></li>
+      <li><a href="https://www.canva.com/design/DAEL4AeKPk4/-nP-QrKzfKdS4N5vA1X4bg/edit"
+      >Ma présentation</li>
 
       </ul>
-      
-
-    
 
   </header>
     <main>
